--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
-export INFURA_KEY=""
-export MNEMONIC=""
-export OWNER_ADDRESS=""
-export NFT_CONTRACT_ADDRESS=""
-export FACTORY_CONTRACT_ADDRESS=""
+npm install
+export INFURA_KEY="a54f70a88ea74926bcd69578d63d7da8"
+export MNEMONIC="<metamask>"
 export NETWORK="rinkeby"
+truffle deploy --network rinkeby
